syntax = "proto3";

package noctiforge.worker;

service WorkerService {
  rpc Execute(ExecuteRequest) returns (ExecuteResponse);
}

message ExecuteRequest {
  string action = 1;
  bytes body = 2;
  map<string, string> metadata = 3;
}

message ExecuteResponse {
  oneof outcome {
    ExecuteSuccess success = 1;
    ProblemDetails problem = 2;
  }
}

message ExecuteSuccess {
  bytes body = 1;
}

message ProblemDetails {
  string type = 1;                       // default: "about:blank"
  string detail = 2;                     // specific explanation
  string instance = 3;                   // request / invoke ID

  map<string, string> extensions = 6;
}
